# NameThatCar

./: .gitignore  README.md  TestMatrix.xlsx  cropImagesTrain.m
Data/: cropAndRescaleImages.m  cropImagesNew.m  cropImagesTest.m  generateDatasets.m  generateNewDataAnnotations.m
Data Reorganization/: CMakeLists.txt
Data Reorganization/output/: train_perfect_preds_new.txt
Data Reorganization/src/: main.cpp
data/new-set/: test_boundingboxes.csv
